--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Appointments</h1>
 <ul>
-    <% Appointment.all.each do |appt| %>
+    <% @appointment.each do |appt| %>
         <li>
             Doctor: <%= link_to appt.doctor.name, doctor_path(appt.doctor) %><br>
             Patient: <%= link_to appt.patient.name, patient_path(appt.patient) %><br>
